# CtxRun

./: .gitignore  AI.md  DEV_EN.md  Dev.md  NOTICES.md  README.md  README.zh-CN.md  TODO-AI.md  TODO-AIF.md  TODO-AIR.md  TODO-ZH.md  TODO.md  USAGE.md  USAGE_EN.md  deep-research-report.md  knip.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: guard.json  migrated.json  peek.json
src-tauri/crates/automator/: Cargo.toml  build.rs
src-tauri/crates/automator/permissions/autogenerated/: reference.md
src-tauri/crates/automator/permissions/autogenerated/commands/: execute_workflow.toml  execute_workflow_graph.toml  (+8 more)
src-tauri/crates/automator/permissions/schemas/: schema.json
src-tauri/crates/automator/src/: browser.rs  cdp.rs  commands.rs  engine.rs  error.rs  inspector.rs  lib.rs  models.rs  screen.rs
src-tauri/crates/browser-utils/: Cargo.toml
src-tauri/crates/browser-utils/src/: error.rs  lib.rs
src-tauri/crates/context/: Cargo.toml  build.rs
src-tauri/crates/context/permissions/autogenerated/: reference.md
src-tauri/crates/context/permissions/schemas/: schema.json
src-tauri/crates/context/src/: commands.rs  core.rs  error.rs  lib.rs  processing.rs  scanner.rs  tokenizer.rs
src-tauri/crates/context/src/gitleaks/: allowlist.rs  mod.rs  rule.rs  rules_ai.rs  rules_cloud.rs  rules_communication.rs  rules_package.rs  rules_payment.rs  rules_remaining.rs
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/migrations/: V1__baseline.sql  V2__shell_history.sql  V4__refinery_notes.sql
src-tauri/crates/db/src/: apps.rs  error.rs  init.rs  lib.rs  models.rs  project_config.rs  prompts.rs  secrets.rs  shell_history.rs  url_history.rs
src-tauri/crates/env-probe/: Cargo.toml
src-tauri/crates/env-probe/src/: lib.rs
src-tauri/crates/env-probe/src/commands/: environment.rs  mod.rs  monitoring.rs  system_info.rs
src-tauri/crates/env-probe/src/env_probe/: browsers.rs  common.rs  identity.rs  ides.rs  mod.rs  network.rs  npm.rs  scan_logic.rs  scanners.rs  sdks.rs  system.rs  traits.rs
src-tauri/crates/exec-runtime/: Cargo.toml  build.rs
src-tauri/crates/exec-runtime/permissions/autogenerated/: reference.md
src-tauri/crates/exec-runtime/permissions/schemas/: schema.json
src-tauri/crates/exec-runtime/src/: commands.rs  lib.rs  manager.rs  models.rs  powershell_parser.ps1  safety.rs  utils.rs
src-tauri/crates/git/: Cargo.toml  build.rs
src-tauri/crates/git/permissions/autogenerated/: reference.md
src-tauri/crates/git/permissions/schemas/: schema.json
src-tauri/crates/git/src/: commands.rs  error.rs  export.rs  lib.rs  models.rs
src-tauri/crates/hyperview/: Cargo.toml
src-tauri/crates/hyperview/src/: commands.rs  lib.rs  peek.rs  protocol.rs  sniffer.rs
src-tauri/crates/miner/: Cargo.toml  build.rs
src-tauri/crates/miner/assets/: extract.js
src-tauri/crates/miner/permissions/autogenerated/: reference.md
src-tauri/crates/miner/permissions/schemas/: schema.json
src-tauri/crates/miner/src/: commands.rs  error.rs  lib.rs  models.rs
src-tauri/crates/miner/src/core/: driver.rs  extractor.rs  mod.rs  postprocess.rs  queue.rs  scope.rs  single_page.rs  storage.rs  web_search.rs
src-tauri/crates/ocr/: Cargo.toml  build.rs
src-tauri/crates/ocr/permissions/autogenerated/: reference.md
src-tauri/crates/ocr/permissions/schemas/: schema.json
src-tauri/crates/ocr/src/: commands.rs  download.rs  error.rs  lib.rs  models.rs  paths.rs  service.rs  utils.rs
src-tauri/crates/process-utils/: Cargo.toml
src-tauri/crates/process-utils/src/: lib.rs
src-tauri/crates/refinery/: Cargo.toml  build.rs
src-tauri/crates/refinery/permissions/autogenerated/: reference.md
src-tauri/crates/refinery/permissions/schemas/: schema.json
src-tauri/crates/refinery/src/: cleanup_worker.rs  commands.rs  error.rs  lib.rs  models.rs  storage.rs  worker.rs
src-tauri/crates/runtime-utils/: Cargo.toml
src-tauri/crates/runtime-utils/src/: idle.rs  lib.rs  tasks.rs  time.rs  wait.rs
src-tauri/crates/tool-runtime/: Cargo.toml  build.rs
src-tauri/crates/tool-runtime/permissions/autogenerated/: reference.md
src-tauri/crates/tool-runtime/permissions/schemas/: schema.json
src-tauri/crates/tool-runtime/src/: agent_fs.rs  commands.rs  fs_tools.rs  lib.rs  miner_tools.rs  models.rs  patch_tools.rs  runtime.rs  sandbox.rs
src-tauri/crates/transfer/: Cargo.toml  build.rs
src-tauri/crates/transfer/permissions/autogenerated/: reference.md
src-tauri/crates/transfer/permissions/schemas/: schema.json
src-tauri/crates/transfer/src/: commands.rs  device.rs  error.rs  lib.rs  mobile.rs  mobile_template.html  models.rs  network.rs  qr.rs  server.rs  transfer.rs  ws.rs
src-tauri/crates/workspace-tests/: Cargo.toml
src-tauri/crates/workspace-tests/src/: lib.rs
src-tauri/crates/workspace-tests/tests/: centralized_automator_safety.rs  centralized_context_core.rs  centralized_context_gitleaks.rs  centralized_context_scanner_and_commands.rs  centralized_db_commands.rs  centralized_db_migrations.rs  centralized_db_query_behaviors.rs  centralized_env_probe_commands.rs  centralized_git_commands.rs  centralized_git_export.rs  centralized_process_utils_and_shell.rs  centralized_refinery_commands.rs  centralized_refinery_storage.rs  centralized_runtime_and_miner.rs  centralized_sql_safety.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: V3__create_refinery_table.sql
src-tauri/src/: agent_tools.rs  app_config.rs  apps.rs  error.rs  fs_commands.rs  guard.rs  main.rs  mcp_http.rs  monitor.rs  peek.rs  scheduler.rs  shortcuts.rs  tray_support.rs  window_styling.rs
src-tauri/src/automator/: commands.rs  engine.rs  mod.rs
src-tauri/src/context/: commands.rs  tokenizer.rs
src-tauri/src/db/: init.rs
src-tauri/src/env_probe/: binaries.rs  browsers.rs  common.rs  ides.rs  mod.rs  npm.rs  scan_logic.rs  sdks.rs
src-tauri/src/hyperview/: mod.rs  protocol.rs  sniffer.rs
src-tauri/src/refinery/: cleanup_worker.rs  commands.rs  mod.rs  model.rs  storage.rs  worker.rs
(+289 files in other folders)
