[package]
name = "ctxrun"
version = "1.4.1"
description = "A Tool"
authors = ["Winrisef"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.91"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-single-instance = { version = "2" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
sysinfo = "0.37"
git2 = "0.19"
chrono = "0.4"
similar = "2.6"
regex = "1.12"
once_cell = "1.21"
rayon = "1.10"
tiktoken-rs = "0.9"
arboard = "3.6"
entropy = "0.4"

rusqlite = { version = "0.37", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
serde_rusqlite = "0.40"
uuid = { version = "1.19", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
listeners = "0.3"
which = "8.0"
wait-timeout = "0.2"
csv = "1.4"
walkdir = "2"
genai = "0.5.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
infer = "0.19"
mime_guess = "2.0"
url = "2.5"
percent-encoding = "2.3"
ignore = "0.4"
clipboard-rs = "0.3"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
x-win = "5.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 
strip = true

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming" 
] }
