[package]
name = "ctxrun"
version = "2.3.0"
edition = "2024"
description = "A Tool"
authors = ["Winrisef"]
license = ""
repository = ""
rust-version = "1.91"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]


[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-global-shortcut = "2"
tauri-plugin = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
qrcode = "0.14"
percent-encoding = "2.3"

# Automation
enigo = "0.6.1"
which = "8"

# Context
rayon = "1.10"
tiktoken-rs = "0.9"
ignore = "0.4"
arboard = "3.6"
regex = "1.12"
once_cell = "1.21"
entropy = "0.4"
ocr-rs = "2.2.2"

# db
rusqlite = { version = "0.37", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
serde_rusqlite = "0.40"
chrono = "0.4"
uuid = { version = "1.19", features = ["v4"] }
ctxrun-db = { path = "crates/db" }

# git
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
similar = "2.6"
thiserror = "2.0"

# refinery
clipboard-rs = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam-channel = "0.5"
x-win = "5.5"

# Browser utilities
ctxrun-browser-utils = { path = "crates/browser-utils" }
# Env probe utilities
ctxrun-env-probe = { path = "crates/env-probe" }
# Hyperview preview utilities
ctxrun-hyperview = { path = "crates/hyperview" }
ctxrun-process-utils = { path = "crates/process-utils" }
ctxrun-runtime-utils = { path = "crates/runtime-utils" }

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]

ctxrun-plugin-automator = { path = "crates/automator" }
ctxrun-plugin-context = { path = "crates/context" }
ctxrun-plugin-git = { path = "crates/git" }
ctxrun-plugin-refinery = { path = "crates/refinery" }
ctxrun-plugin-miner = { path = "crates/miner" }
ctxrun-plugin-ocr = { path = "crates/ocr" }
ctxrun-plugin-tool-runtime = { path = "crates/tool-runtime" }
ctxrun-plugin-exec-runtime = { path = "crates/exec-runtime" }
ctxrun-plugin-transfer = { path = "crates/transfer" }

ctxrun-db = { workspace = true }
ctxrun-env-probe = { workspace = true }
ctxrun-hyperview = { workspace = true }
ctxrun-process-utils = { workspace = true }

tauri-plugin-single-instance = { workspace = true }
serde_json = "1.0"
serde = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-os = { workspace = true }
sysinfo = "0.37"
regex = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
walkdir = "2"
tokio = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { workspace = true }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 
strip = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Ole",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging"
] }
