[package]
name = "ctxrun-plugin-automator"
version = "2.0.0"
edition = "2024"
description = "Automator plugin for CtxRun"
links = "ctxrun-plugin-automator"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
enigo = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }