[package]
name = "ctxrun-plugin-automator"
version = "2.0.0"
edition = "2024"
description = "Automator plugin for CtxRun"
links = "ctxrun-plugin-automator"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
enigo = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
tauri-plugin = { workspace = true }