[package]
name = "ctxrun-plugin-automator"
version = "2.0.0"
edition = "2024"
description = "Automator plugin for CtxRun"
links = "ctxrun-plugin-automator"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
enigo = { workspace = true }
xcap = "0.8"
image = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
regex = { workspace = true }

chromiumoxide = "0.9.1"
ctxrun-browser-utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }
uiautomation = "0.24"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
