[package]
name = "ctxrun-plugin-context"
version.workspace = true
edition.workspace = true
links = "ctxrun-plugin-context"

[dependencies]
tauri = { workspace = true }
ctxrun-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
tiktoken-rs = { workspace = true }
ignore = { workspace = true }
arboard = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
entropy = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }