[package]
name = "ctxrun-db"
version = "1.0.0" 
edition.workspace = true

[dependencies]
tauri = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
csv = "1.4"