[package]
name = "ctxrun-db"
version = "2.0.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
csv = "1.4"
