[package]
name = "ctxrun-env-probe"
version = "2.0.0"
edition = "2024"
description = "Environment probing utilities for CtxRun"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
which = { workspace = true }
tauri = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.37"
wait-timeout = "0.2"
ctxrun-process-utils = { workspace = true }
listeners = "0.3"
starship-battery = "0.10"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
] }
