[package]
name = "ctxrun-plugin-exec-runtime"
version = "0.1.0"
edition = "2024"
description = "Safe command execution runtime for CtxRun"
links = "ctxrun-plugin-exec-runtime"

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
base64 = "0.22"
ctxrun-process-utils = { workspace = true, features = ["tokio"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
