[package]
name = "ctxrun-plugin-git"
version.workspace = true
edition.workspace = true
description = "Git operations and export plugin for CtxRun"
links = "ctxrun-plugin-git" 

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }