[package]
name = "ctxrun-plugin-git"
version = "2.0.0"
edition = "2024"
description = "Git operations and export plugin for CtxRun"
links = "ctxrun-plugin-git" 

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
