[package]
name = "ctxrun-hyperview"
version = "2.0.0"
edition = "2024"
description = "Hyperview preview utilities for CtxRun"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
percent-encoding = "2.3"
mime_guess = "2.0"
infer = "0.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
