[package]
name = "ctxrun-plugin-miner"
version = "2.0.0"
edition = "2024"
description = "High-accuracy web scraper for AI context generation"
links = "ctxrun-plugin-miner"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# 核心能力库
headless_chrome = { version = "1.0", features = ["fetch"] }
url = "2.5"
sanitize-filename = "0.6"
chrono = { workspace = true }
crossbeam-channel = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }
