[package]
name = "ctxrun-plugin-ocr"
version = "0.1.0"
edition = "2024"
description = "OCR service plugin for CtxRun"
links = "ctxrun-plugin-ocr"

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
ocr-rs = { workspace = true }
ctxrun-runtime-utils = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
