[package]
name = "ctxrun-plugin-ocr"
version = "0.1.0"
edition = "2024"
description = "OCR service plugin for CtxRun"
links = "ctxrun-plugin-ocr"

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
ocr-rs = { workspace = true, features = ["build-mnn-from-source"] }
reqwest = { workspace = true }
chrono = { workspace = true }
ctxrun-runtime-utils = { workspace = true }
sha2 = "0.10"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
