[package]
name = "ctxrun-plugin-refinery"
version = "2.0.0"
edition = "2024"
links = "ctxrun-plugin-refinery"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
# 核心依赖
ctxrun-db = { workspace = true }
rusqlite = { workspace = true }

# 剪贴板与图像处理
clipboard-rs = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam-channel = { workspace = true }

# 窗口与输入模拟
x-win = { workspace = true }
enigo = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }