[package]
name = "ctxrun-plugin-tool-runtime"
version = "2.0.0"
edition = "2024"
description = "Tool runtime and secure patch execution plugin for CtxRun"
links = "ctxrun-plugin-tool-runtime"

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ctxrun-plugin-miner = { path = "../miner" }
ctxrun-process-utils = { workspace = true, features = ["tokio"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
