[package]
name = "ctxrun-workspace-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
ctxrun-db = { path = "../db" }
ctxrun-plugin-context = { path = "../context" }
ctxrun-plugin-git = { path = "../git" }
ctxrun-plugin-miner = { path = "../miner" }
ctxrun-plugin-refinery = { path = "../refinery" }
ctxrun-plugin-tool-runtime = { path = "../tool-runtime" }
rusqlite = { workspace = true }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
