[package]
name = "ctxrun-workspace-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
ctxrun-db = { path = "../db" }
ctxrun-env-probe = { path = "../env-probe" }
ctxrun-plugin-automator = { path = "../automator" }
ctxrun-plugin-context = { path = "../context" }
ctxrun-plugin-git = { path = "../git" }
ctxrun-plugin-miner = { path = "../miner" }
ctxrun-plugin-refinery = { path = "../refinery" }
ctxrun-plugin-tool-runtime = { path = "../tool-runtime" }
ctxrun-process-utils = { path = "../process-utils" }
tauri = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
sysinfo = "0.37"
walkdir = "2.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
